sites/all/themes/dttheme/css/style.css
/* ... */
.region-header #block-user-login .item-list li.last {
  padding-left: 0.5em; /* LTR */
}
.region-header #block-user-login ul.openid-links li.last {
  padding-left: 0; /* LTR */
}
.region-header #user-login-form li.openid-link a,
.region-header #user-login li.openid-link a {
  padding-left: 20px; /* LTR */
}
.region-header #block-user-login .form-actions {
  margin: 4px 0 0;
  padding: 0;
  clear: both;
}
.region-header #block-user-login input.form-submit {
  border: 1px solid;
  border-color: #ccc;
  border-color: rgba(255, 255, 255, 0.5);
  background: #eee;
  background: rgba(255, 255, 255, 0.7);
  margin: 4px 0;
  padding: 3px 8px;
}
.region-header #block-user-login input.form-submit:hover {
  background: #fff;
  background: rgba(255, 255, 255, 0.9);
}
/* Search block in region header. */
.region-header #block-search-form {
}
.region-header #block-search-form .form-text {
  width: 890px;
  margin: 0 5px;
  border: none;
}
/* Language switcher block in region header. */
.region-header .block-locale ul li {
  display: inline;
  padding: 0 0.5em;
}

/* --------------- Main Menu ------------ */

#main-menu {
  clear: both;
  padding-top: 25px;
}
#main-menu-links {
  font-size: 16px;
  margin: 0;
  padding: 0;
}
#main-menu-links li {
  float: left; /* LTR */
  list-style: none;
  padding: 0 1px;
  margin: 0 1px;
}
#main-menu-links a {
  font-family: "Proxima Nova", sans-serif;
  font-weight: 700;
  color: #8e8e8e;
  float: left; /* LTR */
  height: 1em;
  line-height: 1em;
  padding: 0 11px;
  text-decoration: none;
}
#main-menu-links a:hover {
  color: #32cc82;
}
#main-menu-links li a.active {
  border-bottom: none;
}
.featured #main-menu-links li a:active,
.featured #main-menu-links li a.active {
  background: #f0f0f0;
  background: rgba(240, 240, 240, 1.0);
}

/* --------------- Secondary Menu ------------ */

#secondary-menu-links {
  float: right; /* LTR */
  font-size: 0.929em;
  margin: 10px 25px 0;
}
#secondary-menu-links a:hover {
  text-decoration: none;
}

/* ------------------- Main ------------------- */

#main {
  margin-top: 35px;
  margin-bottom: 40px;
}

/* ----------------- Featured ----------------- */

#featured {
  text-align: center;
  font-size: 1.643em;
  font-weight: normal;
  line-height: 1.4;
  padding: 20px 0 45px;
  margin: 0;
  background: #f0f0f0;
  background: rgba(30, 50, 10, 0.08);
  border-bottom: 1px solid #e7e7e7;
  text-shadow: 1px 1px #fff;
}
#featured h2 {
  font-size: 1.174em;
  line-height: 1;
}
#featured p {
  margin: 0;
  padding: 0;
}

/* --------------- Highlighted ---------------- */

#highlighted {
  border-bottom: 1px solid #d3d7d9;
  font-size: 120%;
}

/* ------------------- Help ------------------- */

.region-help {
  border: 1px solid #d3d7d9;
  padding: 0 1.5em;
  margin-bottom: 30px;
}

/* ----------------- Content ------------------ */

.content {
  margin-top: 10px;
}
h1#page-title {
  font-family: "Helvetica Neue LT Pro", sans-serif;
  font-weight: 800;
  font-size: 32px;
  line-height: 1em;
  margin-top: 0;
  padding: 45px 45px 20px 45px;
}

h1.definition-teaser-title {
  font-family: "Helvetica Neue LT Pro", sans-serif;
  font-weight: 800;
  font-size: 28px;
  line-height: 1em;
  padding-bottom: 10px;
  margin-top: 0;
}

h1.definition-teaser-title a:link, h1.definition-teaser-title a:active, h1.definition-teaser-title a:visited {
  color: #32cc82;
}

h1.definition-teaser-title a:hover{
  color: #259b65;
}

#content h2 {
  color: #000000;
  margin-bottom: 2px;
  font-size: 1.429em;
  line-height: 1.85em;
}

#content .definition-source-wrapper h2 {
  font-size: 14px;
  margin: 0;
  padding-top: 0;
}



#content .node-definition.view-mode-teaser .definition-source-wrapper h2.definition-teaser-title {
  font-size: 14px;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  padding-bottom: 1px;
  padding-left: 30px;
}

#content .definition-source-wrapper h2.definition-teaser-title {
  font-size: 14px;
  margin: 5px 0;
}

#content .definition-source-wrapper .label-inline {
  font-family: "Proxima Nova", sans-serif;
  font-weight: 700;
  font-size: 12px;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #8e8e8e;
  float: left;
  padding-top: 4px;
  line-height: 1.8em;
  padding-right: 30px;
}

.definition-source-wrapper .node-person a {
  padding-left: 86px;
  
}

.entity-items {
  float: left;
}

#content .definition-source-wrapper .entity-info .label-inline {
  font-family: "Proxima Nova", sans-serif;
  font-weight: 700;
  font-size: 12px;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #8e8e8e;
  line-height: 2em;
  padding-top: 5px;
}

.node-definition.view-mode-teaser .field-label-above .label-above {
  padding: 0 0 5px;
}

.field-label-above .label-above {
  font-family: "Proxima Nova", sans-serif;
  font-weight: 700;
  font-size: 12px;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #8e8e8e;
  padding: 0 45px 5px;
}

.field-label-tags {
  overflow: auto;
}

.view-mode-full .field-label-tags {
  overflow: auto;
  padding: 0 45px 45px;
}

.field-label-tags .label-above {
  font-family: "Proxima Nova", sans-serif;
  font-weight: 700;
  font-size: 12px;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #8e8e8e;
  padding-bottom: 5px;
}

.view-mode-full .entity-info {
  display: inline-block;
}

.entity-info .date-display-single {
  font-size: 14px;
  color: #181818;
  line-height: 1em;
  padding-left: 18px;
}

.entity-info a {
  font-size: 14px;
}

.definition-tag  a {
	display: inline-block;
	float: left;
	font-family: "Helvetica Neue LT Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 12px;
	font-weight: bold;
	color: #777;
	background-color: #EDEDED;
	padding: 8px 10px 4px;
	border-radius: 3px;
	margin: 5px 5px 0 0;
}

.definition-tag  a:hover {
	color: #FFF;
	background-color: #777;
}

.node-definition.view-mode-teaser .field-label-above .label-above p {
  margin-bottom: 0.9em;
}
/* ... */

